<!--
  ~ /*
  ~  * Copyright (c) 2022 NetEase, Inc.  All rights reserved.
  ~  * Use of this source code is governed by a MIT license that can be found in the LICENSE file.
  ~  */
  -->

<resources>
    <string name="medical_app_name">医疗Demo</string>
    <string name="medical_login_home_desc">互联网医疗场景 Demo</string>
    <string name="medical_verification_code">手机验证码登录</string>
    <string name="medical_login_tips">登录即视为您已同意 隐私政策 和 用户服务协议</string>
    <string name="medical_privacy_policy">隐私政策</string>
    <string name="medical_user_protocol">用户协议</string>
    <string name="medical_sure">确认</string>
    <string name="medical_select_role_tip">体验过程中可随时切换体验角色</string>
    <string name="medical_select_role_title">请选择体验角色</string>
    <string name="medical_home_page">问诊</string>
    <string name="medical_message">消息</string>
    <string name="medical_mine">我的</string>
    <string name="medical_experience">功能体验</string>
    <string name="medical_cancel">取消</string>
    <string name="medical_change_role_title">身份切换</string>
    <string name="medical_change_role_content">是否将身份切换为</string>
    <string name="medical_doctor">医生</string>
    <string name="medical_sufferer">患者</string>
    <string name="medical_role_desc">当前体验：%s</string>
    <string name="medical_doctor_desc">专家名医</string>
    <string name="medical_feature_tip">仅展示，无实际功能</string>
    <string name="medical_consultation_online">在线问诊</string>
    <string name="medical_doctor_home">医生主页</string>
    <string name="medical_department_all">全部</string>
    <string name="medical_department_middle">呼吸内科</string>
    <string name="medical_department_right">皮肤科</string>
    <string name="medical_expert">专家名医</string>
    <string name="medical_sufferer_comment">患者评价</string>
    <string name="medical_video_consultation">视频问诊</string>
    <string name="medical_audio_consultation">语音问诊</string>
    <string name="medical_text_img_consultation">图文问诊</string>
    <string name="medical_current_role">当前角色：</string>
    <string name="medical_input_mobile">输入已注册的手机号</string>
    <string name="medical_call_record">呼叫记录：</string>
    <string name="medical_virtual_bg">接通时开启虚拟背景</string>
    <string name="medical_open_video">接通时开启摄像头</string>
    <string name="medical_open_audio">接通时开启麦克风</string>
    <string name="medical_open_high_on">是否开启高接通</string>
    <string name="medical_open_high_on_tip">开启后，15秒RTC未接听会自动切换至电话语音呼叫</string>
    <string name="medical_setup_video">发起问诊</string>
    <string name="medical_mobile_error">请输入正确的手机号</string>
    <string name="medical_mobile_error_doctor">请将该手机号身份切换为患者后重试</string>
    <string name="medical_mobile_error_sufferer">请将该手机号身份切换为医生后重试</string>
    <string name="medical_mine_sufferer">我的患者</string>
    <string name="medical_mine_task">我的排班</string>
    <string name="medical_mine_apply">申请免费试用</string>
    <string name="medical_mine_setting">通用设置</string>
    <string name="medical_mine_suffer">（模拟患者）</string>
    <string name="medical_mine_department">呼吸科 主任医师</string>
    <string name="medical_mine_male">男</string>
    <string name="medical_mine_female">女</string>
    <string name="medical_mine_age">30岁</string>
    <string name="medical_mine_doctor_name">李雪琴</string>
    <string name="medical_mine_sufferer_name">李诞</string>
    <string name="medical_mine_doctor">我的医生</string>
    <string name="medical_mine_record">问诊记录</string>
    <string name="medical_home_doctor_page">我的患者</string>
    <string name="medical_wait_sufferer">待接诊患者</string>
    <string name="medical_today_task">今日工作</string>
    <string name="medical_high_on">高接通体验</string>
    <string name="medical_other">其他功能体验</string>
    <string name="medical_call_reject">拒绝</string>
    <string name="medical_call_accept">接听</string>
    <string name="medical_other_already_close_camera">对方已关闭摄像头</string>
    <string name="medical_already_close_camera">已关闭摄像头</string>
    <string name="medical_permission_request_failed_tips">权限申请失败，暂无法使用！</string>
    <string name="medical_call_failed">呼叫发起失败</string>
    <string name="medical_reject_tips">对方已拒绝你的请求</string>
    <string name="medical_user_busy">对方占线</string>
    <string name="medical_caller_timeout_tips">无法连接对方，请稍后再试</string>
    <string name="medical_called_timeout_tips">超时未接，已结束连接</string>
    <string name="medical_cancel_by_other">对方已取消连接</string>
    <string name="medical_invited_video_title">邀请你视频电话</string>
    <string name="medical_invited_audio_title">邀请你语音电话</string>
    <string name="medical_invited_subtitle">呼吸内科  主任医师</string>
    <string name="medical_connecting">正在连接对方...</string>
    <string name="medical_end_call">结束通话</string>
    <string name="medical_sure_end_call">是否结束通话？</string>
    <string name="medical_call_out_failed">呼叫未成功发出</string>
    <string name="medical_surplus_time_tip">本次询问还剩1分钟</string>
    <string name="medical_other_end_call">对方结束通话</string>
    <string name="medical_surplus_end_tip">本次询问结束</string>
    <string name="medical_in_call">通话中...</string>
    <string name="medical_audio_notify_title">语音通知</string>
    <string name="medical_audio_notify_empty">请输入通知内容</string>
    <string name="medical_audio_notify_mobile_tip">请输入被通知的手机号</string>
    <string name="medical_audio_notify_content_tip">请输入需通知的语音内容</string>
    <string name="medical_audio_notify_desc">说明：此功能用于诊前通知场景，可自定义提前通知的时间（例如提前30分钟通知医患双方），提高接通率进而提高问诊的完成率。</string>
    <string name="medical_audio_notify_send_message">发送语音消息</string>
    <string name="medical_call_doctor_name">王医生</string>
    <string name="medical_call_sufferer_name">李诞</string>
    <string name="medical_send_audio_success">发送成功</string>
    <string name="medical_auth_name_desc">说明：实名认证功能仅用于体验流程，不实际调用认证能力，有需求可 申请试用</string>
    <string name="medical_auth_name_tip">请输入姓名</string>
    <string name="medical_auth_name_id">请输入正确的身份证号</string>
    <string name="medical_auth_name">输入以下信息，完成实名认证</string>
    <string name="medical_auth_name_title">实名认证</string>
    <string name="medical_commit">提交</string>
    <string name="medical_version">Demo版本</string>
    <string name="medical_logo_desc">网易云信</string>
    <string name="medical_keep_live_title">应用保活</string>
    <string name="medical_auth_mobile_title">号码认证</string>
    <string name="medical_auth_mobile">号码认证效果对比</string>
    <string name="medical_auth_mobile_before">认证前</string>
    <string name="medical_auth_mobile_after">认证后</string>
    <string name="medical_keep_live_top">应用保活可在融合呼叫体验，特性介绍：</string>
    <string name="medical_keep_live_first">1.锁屏保活：</string>
    <string name="medical_keep_live_first_desc">实现锁屏状态下应用高保活，保障应用音视频呼叫达到（备注：目前仅支持Android）</string>
    <string name="medical_keep_live_second">2.适配1000+终端设备：</string>
    <string name="medical_keep_live_second_desc">覆盖市面上大部分机型实现锁屏状态下应用高保活，保障应用音视频呼叫达到（备注：目前仅支持Android）</string>
    <string name="medical_help_notes">帮助说明</string>
    <string name="medical_help_notes_content">1.demo主要用于体验，融合了网易云信在互联网问诊场景的产品特性，包括注册登录、图文/语音/视频问诊、实名认证等流程；\n\n2.demo源码开放，可联系云信商务经理获取，或点击“我的-申请试用”注册账号，商务经理将在1个工作日内联系您；\n\n完整的网易云信医疗解决方案，联系商务经理获取</string>
    <string name="medical_help_notes_tips">注意：图文/语音/视频问诊流程体验，需2个账号，体验角色分别为医生和患者，否则无法通信</string>
    <string name="medical_virtual_bg_tips">虚拟背景RTC SDK已支持，可联系商务经理获取</string>
    <string name="medical_logout">退出登录</string>
    <string name="medical_wait_consultation">待接诊</string>
    <string name="medical_consultation">已接诊</string>

    <string name="medical_sufferer_info">患者信息</string>
    <string name="medical_sufferer_base_info">基本信息：</string>
    <string name="medical_sufferer_illness">病情描述：</string>
    <string name="medical_sufferer_illness_info">头疼，持续大概 1 个月</string>
    <string name="medical_data_error">用户信息异常，请重新登录</string>
    <string name="medical_auth_success">认证成功</string>
    <string name="medical_skip">立即跳转</string>
    <string name="medical_skip_to">将在 %d 秒后跳转</string>
    <string name="medical_auth_name_tips">线上问诊要求实名认证，网易提供认证能力，是否体验</string>
    <string name="medical_no">暂不体验</string>
    <string name="medical_yes">体验</string>
    <string name="medical_close">关闭</string>
    <string name="medical_history">历史问诊</string>
    <string name="medical_end">结束问诊</string>
    <string name="medical_exception">系统开小差了，请稍后再试</string>
    <string name="medical_call_self_tip">不能输入自己的手机号</string>
    <string name="medical_accept_error">加入channel失败</string>
    <string name="medical_no_role_tip">当前用户没有设置角色</string>
    <string name="medical_no_register">手机号未注册</string>

</resources>