<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/dp_8"
    android:layout_marginStart="@dimen/dp_8"
    >

    <TextView
        android:id="@+id/sufferer_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_8"
        android:paddingVertical="@dimen/dp_4"
        android:text="@string/medical_sufferer_info"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/color_666666"
        android:background="@drawable/bg_gray_solid_round"
        />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_8"
        android:paddingVertical="@dimen/dp_4"
        android:text="@string/medical_history"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/color_666666"
        android:background="@drawable/bg_gray_solid_round"
        android:layout_marginHorizontal="@dimen/dp_8"
        />

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_8"
        android:paddingVertical="@dimen/dp_4"
        android:text="@string/medical_end"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/color_666666"
        android:background="@drawable/bg_gray_solid_round"
        />

</LinearLayout>