<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/dp_20"
    android:background="@color/color_white"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center_horizontal"
        android:text="@string/medical_help_notes"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:scaleType="centerInside"
        android:src="@drawable/icon_dialog_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content"
        android:paddingTop="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:paddingHorizontal="@dimen/dp_20"
        android:text="@string/medical_help_notes_content"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20"
        android:text="@string/medical_help_notes_tips"
        android:textColor="@color/color_ff5b64"
        android:textSize="@dimen/text_size_14"
        android:paddingBottom="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />
</androidx.constraintlayout.widget.ConstraintLayout>